rabbitmq/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: collabshare/rabbitmq
          ports:
            - name: http
              containerPort: 15672
            - name: amqp
              containerPort: 5672
