rabbitmq/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 15672
      targetPort: 15672
    - name: amqp
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
